--- a/ActiveCitizenWeb.StaticContentCMS/Views/FAQ/EditQuestion.cshtml
+++ b/ActiveCitizenWeb.StaticContentCMS/Views/FAQ/EditQuestion.cshtml
@@ -20,10 +20,10 @@
         <b>Ответ (можно использовать HTML теги):</b><br />
         @Html.TextAreaFor(m => m.Answer, new { @class = "question-area", @rows = "20" })
         <br /><br />
-        <b>Выберите категорию, в которой будет отображаться вопрос:</b>
+        <b>Выберите раздел, в котором будет отображаться вопрос:</b>
         @Html.DropDownListFor(m => m.Category.Id, Model.CategoryNames)
         <br /><br />
-        <b>Выберите очередность в которой будет отображаться вопрос в категории:</b>
+        <b>Выберите очередность в которой будет отображаться вопрос в разделе:</b>
         @Html.TextBoxFor(m => m.Order)
         <br /><br />
 
