--- a/ActiveCitizenWeb.StaticContentCMS/Views/FAQ/Index.cshtml
+++ b/ActiveCitizenWeb.StaticContentCMS/Views/FAQ/Index.cshtml
@@ -17,7 +17,7 @@
 </div>
 
 <div>
-    <input type="button" value="Новый вопрос" />
+    <input type="button" onclick="newquestion()" value="Новый вопрос" />
     <input type="button" onclick="deletequestion()" value="Удалить выбранный вопрос" />
     <input type="button" onclick="editquestion()" value="Редактировать выбранный вопрос" />
 </div>
