--- a/ActiveCitizenWeb.StaticContentCMS/Views/FAQ/EditQuestion.cshtml
+++ b/ActiveCitizenWeb.StaticContentCMS/Views/FAQ/EditQuestion.cshtml
@@ -8,7 +8,7 @@
     <div class="fit-left">
         <h2>Редактировать вопрос</h2>
     </div><div class="fit-rigth">
-        <h3><a href="../">Обратно к списку вопросов</a></h3>
+        <h3><a href="./">Обратно к списку вопросов</a></h3>
     </div>
 </div>
 
