--- a/ActiveCitizenWeb.StaticContentCMS/Views/FAQ/EditCategory.cshtml
+++ b/ActiveCitizenWeb.StaticContentCMS/Views/FAQ/EditCategory.cshtml
@@ -16,6 +16,7 @@
     <form action="~/FAQ/SaveCategory" class="fill" method="post">
         <b>Название раздела:</b><br />
         @Html.TextAreaFor(m => m.Name, new { @class = "question-area" })
+        @Html.ValidationMessageFor(m => m.Name, "Название раздела не может быть пустым", new { @class = "validation-error"})
         <br /><br />
         <b>Выберите очередность в которой будет отображаться раздел:</b>
         @Html.TextBoxFor(m => m.Order)
