Delete question/category buttons moved to SaveQuestion/SaveCategory html forms for cleaner UI

--- a/ActiveCitizenWeb.StaticContentCMS/Content/Site.css
+++ b/ActiveCitizenWeb.StaticContentCMS/Content/Site.css
@@ -40,9 +40,10 @@ div.fit-left {
     display: inline-block;
     width: 50%;
     text-align: left;
+    float: left;
 }
 
-div.fit-rigth {
+div.fit-right {
     display: inline-block;
     width: 50%;
     text-align: right;
