Re-organizing landing page UI. Adding access control. Adding user management section.

--- a/ActiveCitizenWeb.StaticContentCMS/Views/Shared/_Layout.cshtml
+++ b/ActiveCitizenWeb.StaticContentCMS/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@using ActiveCitizenWeb.StaticContentCMS.ViewModel.Navigation;
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -17,14 +18,19 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Активный гражданин", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("FAQ", "Index", "FaqList")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    @{ 
+                    var context = this.Context.GetOwinContext();
+                    foreach (NavigationElement element in ViewBag.NavigationElements) {
+                    if (element.IsVisible(context))
+                    {
+                    <li>@Html.ActionLink(element.MenuLabel, element.ActionName, element.ControllerName)</li>
+                    }
+                    }
+                    }
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
@@ -32,10 +38,12 @@
     </div>
     <div class="container body-content">
         @RenderBody()
+        @*
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p></p>
         </footer>
+        *@
     </div>
 
     @Scripts.Render("~/bundles/jquery")
