WebApi project draft created. Static content controller implemented.

--- a/ActiveCitizenWeb.StaticContentCMS/Views/_ViewStart.cshtml
+++ b/ActiveCitizenWeb.StaticContentCMS/Views/_ViewStart.cshtml
@@ -1,5 +1,5 @@
 ﻿@using ActiveCitizenWeb.StaticContentCMS.ViewModel.Navigation;
-@using ActiveCitizen.Common;
+@using ActiveCitizen.Common
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
     ViewContext.ViewBag.NavigationElements = new List<NavigationElement>
